fix default bottom gap each container

--- a/source/css/layouts.css
+++ b/source/css/layouts.css
@@ -38,7 +38,7 @@ container{
 
   width: 100%;
 
-  margin: 0px auto;
+  margin-bottom: var(--gap);
 
 }
 
